<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_medium">

    <TextView
        android:id="@+id/text_timer_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        android:textColor="@color/primary"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_large" />

    <TextView
        android:id="@+id/text_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_xxlarge"
        android:textStyle="bold"
        android:textColor="@color/primary"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/text_timer_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_medium" />

    <TextView
        android:id="@+id/focus_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/focus_time"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintTop_toBottomOf="@id/text_timer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_xlarge" />

    <com.google.android.material.slider.Slider
        android:id="@+id/focus_time_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:value="25"
        android:valueFrom="1"
        android:valueTo="60"
        android:stepSize="1"
        app:layout_constraintTop_toBottomOf="@id/focus_time_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/focus_time_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_small"
        android:text="25"
        app:layout_constraintTop_toBottomOf="@id/focus_time_slider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/break_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/break_time"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintTop_toBottomOf="@id/focus_time_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_large" />

    <com.google.android.material.slider.Slider
        android:id="@+id/break_time_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:value="5"
        android:valueFrom="1"
        android:valueTo="30"
        android:stepSize="1"
        app:layout_constraintTop_toBottomOf="@id/break_time_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/break_time_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_small"
        android:text="5"
        app:layout_constraintTop_toBottomOf="@id/break_time_slider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_focus"
        android:textSize="@dimen/text_size_medium"
        android:layout_marginTop="@dimen/margin_xlarge"
        app:layout_constraintTop_toBottomOf="@id/break_time_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_timer"
        android:textSize="@dimen/text_size_medium"
        android:visibility="gone"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@id/button_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout> 